Add homepage Update doc Add "my projects" list

--- a/client/dev/partials/help/general/translation.html
+++ b/client/dev/partials/help/general/translation.html
@@ -16,11 +16,11 @@
 		</p>
 
 		<p>
-			S’il est acceptable de demander aux utilisateurs de traduire, ou faire traduire, les définitions des nouveaux indicateurs créés dans le catalogue commun (bientôt), afin de les rendre plus facilement accessible aux programmes internationaux, ce n’est pas le cas pour la traduction des données qui sont liées à un seul projet.
+			S’il est acceptable de demander aux utilisateurs de traduire, ou faire traduire, les définitions des nouveaux indicateurs créés dans le catalogue commun, afin de les rendre plus facilement accessible aux programmes internationaux, ce n’est pas le cas pour la traduction des données qui sont liées à un seul projet.
 		</p>
 
 		<p>
-			Ainsi sont traduits tous les éléments de structure de l’application (menus, boutons, intitulés de tableaux…), ainsi que le catalogue d’indicateurs (bientôt), mais ne sont pas traduits les cadres logiques, les listes de données brutes collectés sur les terrains et le contenu des analyses descriptives.
+			Ainsi sont traduits tous les éléments de structure de l’application (menus, boutons, intitulés de tableaux…), ainsi que le catalogue d’indicateurs, mais ne sont pas traduits les cadres logiques, les listes de données brutes collectés sur les terrains et le contenu des analyses descriptives.
 		</p>
 
 	</div>
