--- a/client/dev/partials/help/indicators/operation_modes.html
+++ b/client/dev/partials/help/indicators/operation_modes.html
@@ -12,9 +12,9 @@
 
 		<ul>
 			<li>Obligatoire: Tous les projets partageant au moins une thématique avec cet indicateur doivent l’ajouter dans leur cadre logique.</li>
-			<li>Catalogue: Cet indicateur provient du catalogue thématique rédigé au siège. Il n’est en aucun cas obligatoire pour les projets de cette thématique, mais doit être considéré comme pertinent. C’est généralement un indicateur qui est reconnu par des instances politiques, ou des bailleurs, et qui a déjà été mesuré avec succès sur plusieurs projets.</li>
-			<li>Optionnel: Cet indicateur a été créé pour le besoin d’un projet spécifique, mais ne provient pas du catalogue officiel. S’il est très pertinent pour un projet, il peut être utilisé.</li>
-			<li>Historique: Cet indicateur était anciennement un indicateur optionnel, mais il n’était pas pertinent, ou trop difficile à mesurer. Il est donc interdit de le collecter sur des nouveaux projets, et il est en phase d’obsolescence sur les projets sur lesquels il est encore mesuré.</li>
+			<li>Approuvé: Cet indicateur provient d'un standart, il n’est en aucun cas obligatoire, mais doit être considéré comme pertinent et de bonne qualité. C’est généralement un indicateur qui est reconnu par des instances politiques, ou des bailleurs, et qui a déjà été mesuré avec succès sur plusieurs projets.</li>
+			<li>En attente: Cet indicateur a été créé pour le besoin d’un projet spécifique. Le siège ne s'est pas encore prononcé sur sa pertinence au sein du catalogue global.</li>
+			<li>Rejeté: Cet indicateur a été créé pour le besoin d’un projet, mais il n’était pas pertinent, ou trop difficile à mesurer. Il est donc interdit de le collecter sur des nouveaux projets, et il est en phase d’obsolescence sur les projets sur lesquels il est encore mesuré.</li>
 		</ul>
 
 	</div>
@@ -25,3 +25,4 @@
 		The documentation is only available in french for now.
 	</div>
 </div>
+
