--- a/client/dev/partials/help/indicators/presentation_indicator.html
+++ b/client/dev/partials/help/indicators/presentation_indicator.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li>Son nom, sa définition, la norme de laquelle il est issu, ses sources et applications habituelles.</li>
 			<li>Des métadonnées pour le classer : les thématiques auxquelles il peut être appliqué, son unité, son mode d’opération.</li>
-			<li>Des formules pour le calculer à partir de données brutes, et la manière dont on peut l’agréger dans le temps et dans l’espace.</li>
+			<li>Des formules pour le calculer à partir de données brutes.</li>
 			<li>De plus, à chaque indicateur est rattachée, de manière automatique, l’intégralité de son historique de collecte sur le terrain.</li>
 		</ul>
 
