--- a/client/dev/partials/help/project_create/users.html
+++ b/client/dev/partials/help/project_create/users.html
@@ -13,7 +13,7 @@
 		
 		<ul>
 			<li>Les propriétaires : Peuvent modifier le cadre logique, les lieux et groupes d’activité, les plannings de saisie.</li>
-			<li>Les opérateurs de saisies : Peuvent saisir des données brutes sur le projet, et créer des analyses descriptives. </li>
+			<li>Les opérateurs de saisies : Peuvent saisir des données brutes sur le projet. </li>
 		</ul>
 
 	</div>
