--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -52,8 +52,8 @@
 	</div>
 </div>
 
-<div class="panel panel-default" ng-click="filterOpen=!filterOpen" style="cursor: pointer" ng-init="filterOpen=false">
-	<div class="panel-heading">
+<div class="panel panel-default">
+	<div class="panel-heading" ng-click="filterOpen=!filterOpen" style="cursor: pointer" ng-init="filterOpen=false">
 		<i fa-open="filterOpen"></i>
 		<span translate="project.filters"></span>
 	</div>
