--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -107,7 +107,7 @@
 						   eat-click-if="!project._id" disable-if="!project._id">
 
 							<span class="label label-default pull-right">{{numIndicators}}</span>
-							<i class="fa fa-building-o fa-fw"></i>
+							<i class="fa fa-object-group fa-fw"></i>
 							<span translate="shared.logical_frame"></span>
 						</a>
 
