--- a/client/dev/partials/help/menu.html
+++ b/client/dev/partials/help/menu.html
@@ -33,6 +33,177 @@
 				</div>
 			</div>
 
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="help.block.create_project"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group">
+						
+						<a ui-sref="main.help.data_path" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('data_path')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('data_path') && $state.is('main.help.data_path')"></i>
+							<i class="fa fa-eye fa-fw"></i>
+							<span translate="help.page.data_path"></span>
+						</a>
+
+						<a ui-sref="main.help.users" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('users')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('users') && $state.is('main.help.users')"></i>
+							<i class="fa fa-users fa-fw"></i>
+							<span translate="help.page.users"></span>
+						</a>
+
+						<a ui-sref="main.help.entities_groups" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('entities_groups')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('entities_groups') && $state.is('main.help.entities_groups')"></i>
+							<i class="fa fa-map-marker fa-fw"></i>
+							<span translate="help.page.entities_groups"></span>
+						</a>
+
+						<a ui-sref="main.help.activities_demography" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('activities_demography')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('activities_demography') && $state.is('main.help.activities_demography')"></i>
+							<i class="fa fa-object-group fa-fw"></i>
+							<span translate="help.page.activities_demography"></span>
+						</a>
+
+						<a ui-sref="main.help.objectives_results" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('objectives_results')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('objectives_results') && $state.is('main.help.objectives_results')"></i>
+							<i class="fa fa-clock-o fa-fw"></i>
+							<span translate="help.page.objectives_results"></span>
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="help.block.input_follow_up"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group">
+
+						<a ui-sref="main.help.inputs" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('inputs')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('inputs') && $state.is('main.help.inputs')"></i>
+							<i class="fa fa-pencil fa-fw"></i>
+							<span translate="help.page.inputs"></span>
+						</a>
+
+						<a ui-sref="main.help.statistics" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('statistics')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('statistics') && $state.is('main.help.statistics')"></i>
+							<i class="fa fa-line-chart fa-fw"></i>
+							<span translate="help.page.statistics"></span>
+						</a>
+
+						<a ui-sref="main.help.change_definition" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('change_definition')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('change_definition') && $state.is('main.help.change_definition')"></i>
+							<i class="fa fa-repeat fa-fw"></i>
+							<span translate="help.page.change_definition"></span>
+						</a>
+
+					</div>
+				</div>
+			</div>
+	
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="help.block.indicators"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group">
+						<a ui-sref="main.help.presentation_indicator" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('presentation_indicator')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('presentation_indicator') && $state.is('main.help.presentation_indicator')"></i>
+							<i class="fa fa-eye fa-fw"></i>
+							<span translate="help.page.presentation_indicator"></span>
+						</a>
+
+						<a ui-sref="main.help.completeness" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('completeness')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('completeness') && $state.is('main.help.completeness')"></i>
+							<i class="fa fa-chain-broken fa-fw"></i>
+							<span translate="help.page.completeness"></span>
+						</a>
+
+						<a ui-sref="main.help.operation_modes" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('operation_modes')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('operation_modes') && $state.is('main.help.operation_modes')"></i>
+							<i class="fa fa-code-fork fa-fw"></i>
+							<span translate="help.page.operation_modes"></span>
+						</a>
+
+						<a ui-sref="main.help.collection_history" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('collection_history')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('collection_history') && $state.is('main.help.collection_history')"></i>
+							<i class="fa fa-archive fa-fw"></i>
+							<span translate="help.page.collection_history"></span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-md-10 print-full-width" ui-view></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+
+<div class="row">
+	<div class="col-md-2 noprint">
+
+		<div class="panel-group">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="help.block.general"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group">
+						<a ui-sref="main.help.presentation_general" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('presentation_general')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('presentation_general') && $state.is('main.help.presentation_general')"></i>
+							<i class="fa fa-eye fa-fw"></i>
+							<span translate="help.page.presentation_general"></span>
+						</a>
+
+						<a ui-sref="main.help.acls" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('acls')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('acls') && $state.is('main.help.acls')"></i>
+							<i class="fa fa-users fa-fw"></i>
+							<span translate="help.page.acls"></span>
+						</a>
+
+						<a ui-sref="main.help.translation" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('translation')"></i>
+							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('translation') && $state.is('main.help.translation')"></i>
+							<i class="fa fa-language fa-fw"></i>
+							<span translate="help.page.translation"></span>
+						</a>
+					</div>
+				</div>
+			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -51,7 +222,7 @@
 						<a ui-sref="main.help.logical_frame" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('logical_frame')"></i>
 							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('logical_frame') && $state.is('main.help.logical_frame')"></i>
-							<i class="fa fa-building-o fa-fw"></i>
+							<i class="fa fa-object-group fa-fw"></i>
 							<span translate="help.page.logical_frame"></span>
 						</a>
 
@@ -156,3 +327,4 @@
 
 	<div class="col-md-10 print-full-width" ui-view></div>
 </div>
+ -->
