--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -1,10 +1,17 @@
 <doc-reminder pages="indicators.presentation_indicator"></doc-reminder>
 
-
 <a class="btn btn-primary pull-right" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
 	<span translate="indicator.create_new"></span>
 </a>
+
+<div acl-lacks-role="indicator" class="pull-right" tooltip="{{'indicator.cant_create'|translate}}" tooltip-placement="left" style="cursor: not-allowed">
+	<a class="btn btn-primary disabled">
+		<i class="fa fa-plus"></i>
+		<span translate="indicator.create_new"></span>
+	</a>
+</div>
+
 <div class="form-horizontal">
 	<div class="form-group">
 		<label for="search-input" class="col-sm-1" translate="indicator.search"></label>
