Improve doc/translations

--- a/client/dev/partials/help/general/presentation_general.html
+++ b/client/dev/partials/help/general/presentation_general.html
@@ -6,7 +6,6 @@
 
 <div ng-switch="language">
 	<div ng-switch-when="fr">
-
 		<p>
 			Monitool est un outil qui a pour but premier de pousser les projets internationaux de Médecins du Monde à unifier leurs mécanismes de mesure de résultat et impact sur le terrain, tout en réduisant la charge de travail représentée par le monitoring.
 		</p>
@@ -15,8 +14,16 @@
 		<ul>
 			<li>Les définitions de tous les indicateurs possibles à collecter.</li>
 			<li>Les définitions des projets présents et passés de l’association.</li>
-			<li>Les données brutes collectées sur le terrain, et les valeurs des indicateurs qui en découlent.</li>
+			<li>Les données d'activité collectées sur le terrain, et les valeurs des indicateurs qui en découlent.</li>
 		</ul>
+
+		<br/>
+		<p>Il n'a cependant pas pour rôle d'aider à collecter les données face aux usagers des services, ni d'agréger ces même données.</p>
+
+		<img src="img/data_coverage_fr.png" class="img-thumbnail" style="width: 80%" />
+
+
+
 	</div>
 	<div ng-switch-when="es">
 		La documentación solo esta traducida en francès por ahora.
