--- a/client/dev/partials/help/project_create/users.html
+++ b/client/dev/partials/help/project_create/users.html
@@ -1,19 +1,19 @@
 <ol class="breadcrumb">
 	<li class="active" translate="shared.help"></li>
-	<li class="active" translate="help.block.project"></li>
+	<li class="active" translate="help.block.create_project"></li>
 	<li class="active" translate="help.page.users"></li>
 </ol>
 
 <div ng-switch="language">
 	<div ng-switch-when="fr">
+		
+		<p>Si tous les membres de Médecins du Monde peuvent consulter les données de tous les projets, il n'en est pas de même pour les droits de modifications</p>
 
-		<p>Nous avons vu qu’à travers l’attribution de rôles il était possible d’autoriser les utilisateurs à réaliser certaines actions sur les données qui sont partagés par tous les utilisateurs de l’outil (catalogue d’indicateurs, thématiques, …).</p>
-		<p>Ce même mécanisme existe au sein de chaque projet afin de déterminer les utilisateurs ayant droit à certaines actions.</p>
-		<p>Deux groupes existent :</p>
+		<p>Pour chaque projet, deux groupes d'utilisateurs existent:</p>
 		
 		<ul>
-			<li>Les propriétaires : Peuvent modifier le cadre logique, les lieux et groupes d’activité, les plannings de saisie.</li>
-			<li>Les opérateurs de saisies : Peuvent saisir des données brutes sur le projet. </li>
+			<li>Les propriétaires: Peuvent modifier le cadre logique, les lieux et groupes d’activité, les formulaires de collecte.</li>
+			<li>Les opérateurs de saisies : Peuvent saisir des données sur le projet.</li>
 		</ul>
 
 	</div>
