--- a/client/dev/partials/help/project_follow_up/inputs.html
+++ b/client/dev/partials/help/project_follow_up/inputs.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li class="active" translate="shared.help"></li>
-	<li class="active" translate="help.block.project"></li>
+	<li class="active" translate="help.block.input_follow_up"></li>
 	<li class="active" translate="help.page.inputs"></li>
 </ol>
 
