--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -4,7 +4,7 @@
 	<li class="active" translate="project.collection_input_list"></li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.input_forms,project.change_definition,project.inputs"></doc-reminder>
+<doc-reminder pages="input_follow_up.inputs"></doc-reminder>
 
 <ul class="nav nav-tabs" role="tablist">
 	<li ng-class="{active:inputs==waitingInputs}" ng-show="showWaiting">
