--- a/client/dev/partials/projects/specification/user-list.html
+++ b/client/dev/partials/projects/specification/user-list.html
@@ -4,7 +4,7 @@
 	<li class="active" translate="project.users"></li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.users"></doc-reminder>
+<doc-reminder pages="create_project.users"></doc-reminder>
 
 <form class="form-horizontal" role="form" name="usersForm" novalidate>
 
