--- a/client/dev/partials/help/project_create/entities_groups.html
+++ b/client/dev/partials/help/project_create/entities_groups.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li class="active" translate="shared.help"></li>
-	<li class="active" translate="help.block.project"></li>
+	<li class="active" translate="help.block.create_project"></li>
 	<li class="active" translate="help.page.entities_groups"></li>
 </ol>
 
