--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -5,7 +5,7 @@
 	<li class="active">{{form.name}}</li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.input_forms,project.change_definition"></doc-reminder>
+<doc-reminder pages="create_project.change_definition"></doc-reminder>
 
 <div class="alert alert-danger noprint"
 	 ng-if="formUsage.length"
