--- a/client/dev/partials/projects/activity/collection-site-list.html
+++ b/client/dev/partials/projects/activity/collection-site-list.html
@@ -4,7 +4,7 @@
 	<li class="active" translate="project.collection_site_list"></li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.entities_groups,project.change_definition"></doc-reminder>
+<doc-reminder pages="create_project.entities_groups"></doc-reminder>
 
 <form name="projectForm" novalidate>
 	
