--- a/client/dev/partials/projects/indicators/logframe-edit.html
+++ b/client/dev/partials/projects/indicators/logframe-edit.html
@@ -4,7 +4,7 @@
 	<li class="active" translate="shared.logical_frame"></li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.logical_frame,project.change_definition"></doc-reminder>
+<doc-reminder pages="create_project.objectives_results"></doc-reminder>
 
 
 <form class="form-horizontal noprint" role="form" name="projectForm" novalidate>
