--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -4,8 +4,7 @@
 	<li class="active" translate="shared.reporting_by_indicator"></li>
 </ol>
 
-<doc-reminder pages="project.presentation_project,project.statistics"></doc-reminder>
-
+<doc-reminder pages="input_follow_up.statistics"></doc-reminder>
 
 <form class="form-horizontal noprint" novalidate>
 	<div class="row">
