Fix input fetching

--- a/client/dev/partials/help/02-create.html
+++ b/client/dev/partials/help/02-create.html
@@ -26,20 +26,23 @@
 
 		<h3>Créer votre projet</h3>
 		<ol>
-			<li>Remplir le nom du projet dans le formulaire proposé
+			<li>
+				Remplir le nom du projet dans le formulaire proposé
 				<ol>
 					<li>Le format généralement choisi est « [Nom du pays] Nom du projet »</li>
 				</ol>
 			</li>
 
-			<li>Choisir dans la liste proposée des thématiques celles qui s’appliquent à votre projet
+			<li>
+				Choisir dans la liste proposée des thématiques celles qui s’appliquent à votre projet
 				<ol>
 					<li>Le choix des thématiques ont pour rôle de vous proposer ultérieurement des indicateurs adaptés à votre projet.</li>
 					<li>Si une thématique manque, prenez en note, mais ce n’est pas un point bloquant.</li>
 				</ol>
 			</li>
 			
-			<li>Choisir des dates de début et fin pour le projet
+			<li>
+				Choisir des dates de début et fin pour le projet
 				<ol>
 					<li>Ces dates sont les dates de début et fin de votre collecte de données.</li>
 					<li>Choisissez comme date de début celle à laquelle votre projet collectera effectivement des données.</li></li>
@@ -151,7 +154,7 @@
 	</div>
 	<div ng-switch-when="en">
 
-		<h3>Achieving project creation page</h3>
+		<h3>Go to project creation page</h3>
 
 		<ol>
 			<li>
@@ -162,25 +165,25 @@
 			<li>
 				Click the "Create new project"
 				<ol>
-					<li>If the button is grayed out, you do not have the right to create new projects</li>
-					<li>If you think you should have this right, contact your desk and ask him to create your project, or you assign this right.</li>
+					<li>If the button is disabled, you do not have the permission to create new projects</li>
+					<li>If you think you should be allowed, contact your desk and ask him either to create your project or assign the permission to you.</li>
 				</ol>
 				<img src="img/01-02.png" class="img-thumbnail" />
 			</li>
 		</ol>
 
-		<h3>Create your project</h3>
+		<h3>Creating a project</h3>
 
 		<ol>
 			<li>
-				Fill in the name of the project in the proposed form
+				Fill in the name of the project in the supplied form
 				<ol>
-					<li>The format is generally chosen "[country name] Project Name"</li>
+					<li>The format that is generally chosen is "[country name] Project Name"</li>
 				</ol>
 			</li>
 
 			<li>
-				Choose from the proposed list of topics that apply to your project
+				Choose the topics that apply to your project
 				<ol>
 					<li>The choice of thematic role is to subsequently propose appropriate indicators for your project.</li>
 					<li>If a topic is missing, take note, but it is not a blocking points.</li>
