--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -369,3 +369,8 @@ ul:hover>.onrollover {
  ul {
   padding-left: 20px;
 }
+
+  .data-grid th {
+    text-align: center;
+    vertical-align: middle !important;
+  }
