--- a/client/dev/partials/projects/activity/_input_grid.html
+++ b/client/dev/partials/projects/activity/_input_grid.html
@@ -1,48 +1,62 @@
 
-<div ng-if="variable.partitions.length == 0"
-	 acl-has-project-role="input"
-	 acl-fallback="currentInput.values[variable.id]">
+<div class="form-group">
 
-	<input computable
-	       type="text"
-		   class="form-control"
-		   ng-model="data[variable.id]"
-		   placeholder="{{'project.last_input'|translate}}{{oldData[variable.id] || '?'}}" />
-</div>
+	<label for="raw-{{variable.id}}" class="col-sm-2 control-label">
+		{{variable.name}}<br/>
 
-<div ng-if="variable.partitions.length > 0">
+		<ul class="pagination pagination-sm">
+			<li><a ng-click="rotate(-1)"><span>&laquo;</span></a></li>
+			<li><span>Rotation {{rotation}}</span></li>
+			<li><a ng-click="rotate(1)"><span>&raquo;</span></a></li>
+		</ul>
+	</label>
 
-	<table class="table table-bordered table-condensed data-grid">
-		<thead>
-			<tr ng-repeat="row in grid.header">
-				<th colspan="{{grid.body[0].headerCols.length}}"
-					rowspan="{{grid.header.length}}"
-					ng-if="$first"></th>
+	<div class="col-sm-10">
+		<div ng-if="variable.partitions.length == 0"
+			 acl-has-project-role="input"
+			 acl-fallback="currentInput.values[variable.id]">
 
-				<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}">{{col.name}}</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="row in grid.body">
-				<th ng-repeat="headerCol in row.headerCols"
-					ng-if="$parent.$index % rowspans[$index] == 0"
-					style="width: 20%"
-					rowspan="{{rowspans[$index]}}">
-					{{headerCol.name}}
-				</th>
-				
-				<td ng-repeat="dataCol in row.dataCols"
-					acl-has-project-role="input"
-					acl-fallback="data[variable.id + '.' + dataCol]">
+			<input computable
+			       type="text"
+				   class="form-control"
+				   ng-model="data[variable.id]"
+				   placeholder="{{'project.last_input'|translate}}{{oldData[variable.id] || '?'}}" />
+		</div>
 
-					<input computable
-					       type="text"
-						   class="form-control input-sm"
-						   ng-model="data[variable.id + '.' + dataCol]"
-						   placeholder="{{'project.last_input'|translate}}{{oldData[variable.id + '.' + dataCol] || '?'}}" />
-				</td>
-			</tr>
-		</tbody>
-	</table>
+		<div ng-if="variable.partitions.length > 0">
 
+			<table class="table table-bordered table-condensed data-grid">
+				<thead>
+					<tr ng-repeat="row in grid.header">
+						<th colspan="{{grid.body[0].headerCols.length}}" rowspan="{{grid.header.length}}" ng-if="$first">
+							
+		 				</th>
+						<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}">{{col.name}}</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="row in grid.body">
+						<th ng-repeat="headerCol in row.headerCols"
+							ng-if="$parent.$index % rowspans[$index] == 0"
+							style="width: 20%"
+							rowspan="{{rowspans[$index]}}">
+							{{headerCol.name}}
+						</th>
+						
+						<td ng-repeat="dataCol in row.dataCols"
+							acl-has-project-role="input"
+							acl-fallback="data[variable.id + '.' + dataCol]">
+
+							<input computable
+							       type="text"
+								   class="form-control input-sm"
+								   ng-model="data[variable.id + '.' + dataCol]"
+								   placeholder="{{'project.last_input'|translate}}{{oldData[variable.id + '.' + dataCol] || '?'}}" />
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+	</div>
 </div>
