--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -6,58 +6,63 @@
 
 <doc-reminder pages="project.input"></doc-reminder>
 
+<p ng-if="canEdit">
+	<input type="checkbox" ng-model="$parent.showFinished" id="show-finished"/>
+	<label for="show-finished">Afficher toutes les dates</label>
+</p>
+
 <ul class="nav nav-tabs" role="tablist">
-	<li ng-class="{active:inputs==waitingInputs}" ng-show="showWaiting">
-		<a ng-click="inputs=waitingInputs">{{'project.waiting_inputs'|translate}}</a>
-	</li>
-	<li ng-class="{active:inputs==finishedInputs}">
-		<a ng-click="inputs=finishedInputs">{{'project.finished_inputs'|translate}}</a>
-	</li>
-	<li ng-class="{active:inputs==invalidInputs}">
-		<a ng-click="inputs=invalidInputs">{{'project.invalid_inputs'|translate}}</a>
+	<li ng-repeat="form in project.forms" ng-class="{active: form.id == selectedForm.id}">
+		<a ng-click="$parent.selectedForm = form">
+			{{form.name}}&nbsp;
+		</a>
 	</li>
 </ul>
 
 <br/>
 
-<table class="table table-bordered table-stripped table-condensed">
+<style> td { text-align: center; } td a { display: block;width: 100%;}</style>
+
+<table class="table table-bordered table-stripped table-condensed" ng-if="selectedForm.collect == 'entity'">
 	<thead>
 		<tr>
-			<th><a ng-click="pred='period';rev=!rev">{{'shared.date'|translate}}</a></th>
-			<th><a ng-click="pred='inputEntityName';rev=!rev">{{'project.collection_site'|translate}}</a></th>
-			<th><a ng-click="pred='formName';rev=!rev">{{'project.collection_form'|translate}}</a></th>
-			<th></th>
+			<th ng-style="{width: 100 / (project.entities.length + 1) + '%'}">Date Due</th>
+			<th ng-style="{width: 100 / (project.entities.length + 1) + '%'}" ng-repeat="entity in project.entities">{{entity.name}}</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-if="!inputs.length">
-			<td colspan="4" style="text-align: center" translate="project.no_inputs"></td>
-		</tr>
-		<tr ng-repeat="input in inputs|orderBy:pred:rev">
-			<td ng-bind="input.period|amDateFormat:'D MMMM YYYY'"></td>
-			<td ng-bind="input.inputEntityName"></td>
-			<td ng-bind="input.formName"></td>
-			<td>
-				<a class="btn btn-default btn-xs" 
-				   acl-has-project-role="input"
-				   ui-sref="main.project.collection_input_edition({period: input.period.format('YYYY-MM-DD'), formId: input.formId, entityId: input.inputEntityId})">
-					<i class="fa fa-pencil-square-o"></i>
-					<span translate>{{input.filled ? "shared.edit" : "project.input"}}</span>
+		<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
+			<th>{{date}}</th>
+			<td ng-repeat="entity in project.entities">
+				<a class="btn btn-xs"
+				   ng-class="{'btn-default': status[entity.id] === 'done', 'btn-primary': status[entity.id] === 'expected', 'btn-danger': status[entity.id] === 'outofschedule'}"
+				   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: entity.id})"
+				   ng-if="status[entity.id]">
+					{{('project.input_status.' + status[entity.id] + (canEdit ? '-edit' : '-read')) | translate}}
 				</a>
-
-				<a class="btn btn-default btn-xs" 
-				   acl-lacks-project-role="input"
-				   ng-if="input.filled"
-				   ui-sref="main.project.collection_input_edition({period: input.period.format('YYYY-MM-DD'), formId: input.formId, entityId: input.inputEntityId})">
-					<i class="fa fa-pencil-square-o"></i>
-					<span translate="shared.display"></span>
-				</a>
-			</td>
+ 			</td>
 		</tr>
 	</tbody>
-	<tbody ng-if="allDone && !showFinished">
+</table>
+
+<table class="table table-bordered table-stripped table-condensed" ng-if="selectedForm.collect == 'project'">
+	<thead>
 		<tr>
-			<td colspan="5" translate="project.no_waiting_inputs"></td>
+			<th>Date Due</th>
+			<th>Current Status</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
+			<th>{{date}}</th>
+			<td>
+				<a ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
+				   ng-if="status"
+				   class="btn btn-xs"
+				   ng-class="{'btn-default': status === 'done', 'btn-primary': status === 'expected', 'btn-danger': status === 'outofschedule'}">
+					{{('project.input_status.' + status + (canEdit ? '-edit' : '-read')) | translate}}
+				</a>
+			</td>
 		</tr>
 	</tbody>
 </table>
