--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -2,7 +2,17 @@
 	<form class="form-horizontal" role="form" name="planningForm" novalidate>
 		<legend ng-bind="indicator.name[language]"></legend>
 
+		<div class="form-group" show-errors>
+			<label for="display-input" class="col-sm-2 control-label" translate="project.display"></label>
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.display">
+				<input class="form-control" id="display-input" name="display" ng-model="planning.display" placeholder="{{'project.display_ph'|translate}}" required />
+				<p class="help-block" ng-if="planningForm.display.$error.required" translate="form.mandatory"></p>
+			</div>
+		</div>
+		
 		<div class="well well-sm">
+
+
 			<div class="form-group" show-errors>
 				<label for="relevance-input" class="col-sm-2 control-label" translate="project.relevance"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.relevance">
