--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -8,6 +8,26 @@
 
 <form class="form-horizontal noprint" novalidate>
 	<div class="row">
+		
+		<div class="col-sm-12">
+			<div class="form-group">
+				<label for="indicator-input" class="col-sm-1 control-label" translate="shared.indicator"></label>
+				<div class="col-sm-11">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
+						<select id="indicator-input"
+								class="form-control input-sm"
+								ng-model="indicatorId"
+								ng-options="id as indicator.display for (id, indicator) in project.indicators"></select>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+
+	<div class="row">
 		<div class="col-sm-6">
 			<div class="form-group">
 				<label for="indicator" class="col-sm-2 control-label" translate="shared.begin"></label>
@@ -62,20 +82,6 @@
 							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
 						</select>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="form-group">
-				<label for="indicator-input" class="col-sm-2 control-label" translate="shared.indicator"></label>
-				<div class="col-sm-10">
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
-						<select id="indicator-input"
-								class="form-control input-sm"
-								ng-model="indicatorId"
-								ng-options="id as indicator.name[language] for (id, indicator) in indicatorsById"></select>
 					</div>
 				</div>
 			</div>
