Factorize a couple widgets into directives (optional date / number) Remove form sections (variables/elements are now directly used) Add start/end dates to locations Remove useless fields from indicatorplannings Rewrite project-input Make all tests pass Change input format storage {"id.partition: 0, ...} => {"id": {"partition": 0, ...}, ...} Allow playing with input forms.

--- a/client/dev/partials/projects/activity/collection-form-list.html
+++ b/client/dev/partials/projects/activity/collection-form-list.html
@@ -10,7 +10,6 @@
 			<th translate="shared.name"></th>
 			<th translate="shared.begin"></th>
 			<th translate="shared.end"></th>
-			<th translate="shared.active"></th>
 			<th translate="project.periodicity"></th>
 			<th translate="project.collect"></th>
 			<th></th>
@@ -22,9 +21,8 @@
 		</tr>
 		<tr ng-repeat="form in project.forms">
 			<td>{{form.name}}</td>
-			<td>{{form.start | amDateFormat: 'D MMMM YYYY'}}</td>
-			<td>{{form.end | amDateFormat: 'D MMMM YYYY'}}</td>
-			<td><i fa-boolean="form.active"></i></td>
+			<td>{{(form.start || project.begin) | amDateFormat: 'D MMMM YYYY'}}</td>
+			<td>{{(form.end || project.end) | amDateFormat: 'D MMMM YYYY'}}</td>
 			<td>{{'project.periodicities.' + form.periodicity|translate}}</td>
 			<td>{{'project.collects.' + form.collect|translate}}</td>
 			<td>
