--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -7,12 +7,8 @@
 
 <doc-reminder pages="project.structure,project.change_definition"></doc-reminder>
 
-<div class="alert alert-danger noprint"
-	 ng-if="formUsage.length"
-	 
-	 acl-has-project-role="owner">
-<!-- {{ 'project.collection_form_warning'|translate:{num_inputs:formUsage.length} }}
- -->	 <span ng-bind-html=" 'project.collection_form_warning'|translate:{num_inputs:formUsage.length} "></span>
+<div class="alert alert-danger noprint" ng-if="formUsage.length" acl-has-project-role="owner">
+	 <span ng-bind-html="'project.collection_form_warning'|translate:{num_inputs:formUsage.length}"></span>
 </div>
 
 <form class="form-horizontal" role="form" name="formForm" novalidate>
@@ -31,15 +27,6 @@
 				   required />
 			
 			<p class="help-block" ng-if="formForm.name.$error.required" translate="form.mandatory"></p>
-		</div>
-	</div>
-
-	<div class="form-group">
-		<label for="active-input" class="col-sm-2 control-label" translate="shared.active"></label>
-		<div class="col-sm-10">
-			<p class="form-control-static" acl-has-project-role="owner" acl-fallback="form.active">
-				<input type="checkbox" id="active-input" ng-model="form.active" />
-			</p>
 		</div>
 	</div>
 
@@ -67,31 +54,10 @@
 		</div>
 	</div>
 
-	<div class="form-group" show-errors>
+	<div class="form-group">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
 		<div class="col-sm-10">
-			<div class="input-group" acl-has-project-role="owner">
-				<div class="input-group-addon">
-					<input type="checkbox" ng-model="form.useProjectStart" id="use-project-start-input" />
-					<label for="use-project-start-input" style="font-weight: normal; display: inline; ">{{'project.begin'|translate}}</label>
-				</div>
-
-				<input type="text" 
-					   datepicker-popup="longDate"
-					   name="start"
-					   ng-model="form.start"
-					   is-open="startDateOpen"
-					   ng-click = "startDateOpen = true"
-					   ng-disabled="form.useProjectStart"
-					   ng-required="!form.useProjectStart"
-					   ng-max="form.end"
-					   class="form-control" />
-			</div>
-
-			<p class="form-control-static" acl-lacks-project-role="owner">
-				<span ng-if="form.useProjectStart" translate="project.begin"></span>
-				<span ng-if="!form.useProjectStart" ng-bind="form.start | amDateFormat: 'D MMMM YYYY'"></span>
-			</p>
+			<optional-date ng-model="form.start" default="project.begin"></optional-date>
 		</div>
 	</div>
 
@@ -126,31 +92,10 @@
 		</div>
 	</div>
 
-	<div class="form-group" show-errors>
+	<div class="form-group">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
 		<div class="col-sm-10">
-			<div class="input-group" acl-has-project-role="owner">
-				<div class="input-group-addon">
-					<input type="checkbox" ng-model="form.useProjectEnd" id="use-project-end-input" />
-					<label for="use-project-end-input" style="font-weight: normal; display: inline; ">{{'project.end'|translate}}</label>
-				</div>
-
-				<input type="text" 
-					   datepicker-popup="longDate"
-					   name="end"
-					   ng-model="form.end"
-					   is-open="endDateOpen"
-					   ng-click="endDateOpen=true"
-					   ng-disabled="form.useProjectEnd"
-					   ng-required="!form.useProjectEnd"
-					   ng-min="form.start"
-					   class="form-control" />
-			</div>
-
-			<p class="form-control-static" acl-lacks-project-role="owner">
-				<span ng-if="form.useProjectEnd" translate="project.end"></span>
-				<span ng-if="!form.useProjectEnd" ng-bind="form.end | amDateFormat: 'D MMMM YYYY'"></span>
-			</p>
+			<optional-date ng-model="form.end" default="project.end"></optional-date>
 		</div>
 	</div>
 
@@ -159,31 +104,20 @@
 	<table class="table table-bordered table-condensed table-aggregated-data">
 		<thead>
 			<tr>
-				<th translate="project.section" style="width: 15%"></th>
 				<th translate="project.variable" style="width: 15%"></th>
 				<th translate="project.aggregation" style="width: 15%"></th>
-				<th translate="project.partitions" colspan="{{maxPartitions + 1}}" style="width: 55%"></th>
+				<th translate="project.partitions" colspan="{{maxPartitions + 1}}" style="width: 60%"></th>
 				<th colspan="2" translate="project.actions" acl-has-project-role="owner" style="width: 10%"></th>
 			</tr>
 		</thead>
-		<tbody ng-repeat="section in form.sections track by section.id">
-
+		<tbody>
 			<!-- variable row -->
-			<tr ng-repeat="element in section.elements track by element.id">
-
-				<!-- section name (only if first variable of section) -->
-				<td rowspan="{{section.elements.length + 1}}"
-					ng-if="$first"
-					mt-content-editable
-					acl-has-project-role="owner"
-					acl-fallback="section.name"
-					ng-model="section.name"></td>
+			<tr ng-repeat="element in form.elements track by element.id">
 
 				<!-- variable name -->
 				<td acl-has-project-role="owner"
 					acl-fallback="element.name"
 					mt-content-editable
-					acl-project-has-role="owner"
 					ng-model="element.name"></td>
 				
 				<!-- variable aggregation -->
@@ -259,76 +193,27 @@
 				<td acl-has-project-role="owner">
 					<a ng-click="upElement($index, $parent.$parent.$index)"
 					   tooltip="{{'project.variable_up'|translate}}"
-					   ng-if="!$parent.$first || !$first">
+					   ng-if="!$first">
 
 						<i class="fa fa-caret-square-o-up"></i>
 					</a>
 					<a ng-click="downElement($index, $parent.$parent.$index)"
 					   tooltip="{{'project.variable_down'|translate}}"
-					   ng-if="!$parent.$last || !$last">
+					   ng-if="!$last">
 
 						<i class="fa fa-caret-square-o-down"></i>
 					</a>
-					<a ng-click="remove(element, section.elements)"
+					<a ng-click="remove(element, form.elements)"
 					   tooltip="{{'project.remove_variable'|translate}}">
 					   <i class="fa fa-times" style="color: red"></i>
 					</a>
 				</td>
-	
-				<!-- section actions (only if first variable) -->
-				<td rowspan="{{section.elements.length + 1}}"
-					ng-if="$first"
-					acl-has-project-role="owner">
-
-					<a ng-click="upSection($parent.$parent.$index)"
-					   tooltip="{{'project.section_up'|translate}}"
-					   ng-if="!$parent.$parent.$first">
-
-						<i class="fa fa-caret-square-o-up"></i>
-					</a>
-					<a ng-click="downSection($parent.$parent.$index)"
-					   tooltip="{{'project.section_down'|translate}}"
-					   ng-if="!$parent.$parent.$last">
-
-						<i class="fa fa-caret-square-o-down"></i>
-					</a>
-					<a ng-click="remove(section, form.sections)"
-					   tooltip="{{'project.remove_section'|translate}}">
-						<i class="fa fa-times" style="color: red"></i>
-					</a>
-				</td>
-
  			</tr>
 
- 			<!-- add new variable row. If section is empty, also contain section form elements --> 
+ 			<!-- add new variable row --> 
 			<tr acl-has-project-role="owner">
-				
-				<td ng-if="section.elements.length === 0" mt-content-editable acl-project-has-role="owner" ng-model="section.name"></td>
-
 				<td colspan="{{maxPartitions + 4}}" style="text-align: center">
-					<a ng-click="newVariable(section.elements)"
-					   class="btn btn-xs btn-default" 
-					   style="width: 100%"
-					   translate="project.add_variable"></a>
-				</td>
-
-				<td ng-if="section.elements.length === 0">
-					<a ng-click="upSection($index)" tooltip="{{'project.section_up'|translate}}" ng-if="!$first">
-						<i class="fa fa-caret-square-o-up"></i>
-					</a>
-					<a ng-click="downSection($index)" tooltip="{{'project.section_down'|translate}}" ng-if="!$last">
-						<i class="fa fa-caret-square-o-down"></i>
-					</a>
-					<a ng-click="remove(section, form.sections)" tooltip="{{'project.remove_section'|translate}}">
-						<i class="fa fa-times" style="color: red"></i>
-					</a>
-				</td>
-			</tr>
-		</tbody>
-		<tbody acl-has-project-role="owner">
-			<tr>
-				<td colspan="{{maxPartitions + 6}}" style="text-align: center">
-					<a ng-click="newSection(form.sections)" class="btn btn-xs btn-default" style="width: 100%" translate="project.add_section"></a>
+					<a ng-click="newVariable()" class="btn btn-xs btn-default"  style="width: 100%" translate="project.add_variable"></a>
 				</td>
 			</tr>
 		</tbody>
