--- a/client/dev/partials/projects/activity/collection-input-edition.html
+++ b/client/dev/partials/projects/activity/collection-input-edition.html
@@ -9,21 +9,42 @@
 
 <doc-reminder pages="project.input"></doc-reminder>
 
-<div class="panel panel-primary" ng-repeat="section in form.sections">
-	<div class="panel-heading" ng-bind="section.name"></div>
-	<div class="panel-body">
-		<form class="form-horizontal">
 
-		<input-grid
-			ng-repeat="variable in section.elements"
-			variable="variable"
-			data="currentInput.values"
-			old-data="previousInput.values"
-			project="project" />
+<form class="form-horizontal">
+	
+	<div class="form-group" ng-repeat="element in form.elements">
+		<label class="col-sm-2 control-label">
+			{{element.name}}<br/>
 
-		</form>
+			<div style="margin-bottom: 5px" ng-if="element.partitions.length > 1">
+				<span style="font-weight: normal">Ordre</span>
+				<div class="btn-group btn-group-xs">
+					<button ng-click="rotate(-1, element)" class="btn btn-default"><i class="fa fa-caret-left"></i></button>
+					<button class="btn btn-default" disabled>{{rotations[element.id] + 1}}</button>
+					<button ng-click="rotate(1, element)" class="btn btn-default"><i class="fa fa-caret-right"></i></button>
+				</div>
+			</div>
+
+			<div style="margin-bottom: 5px" ng-if="element.partitions.length > 2">
+				<span style="font-weight: normal">Distribution</span>
+				<div class="btn-group btn-group-xs">
+					<button ng-click="move(-1, element)" class="btn btn-default"><i class="fa fa-caret-left"></i></button>
+					<button class="btn btn-default" disabled>
+						C{{positions[element.id] + 1}}
+						L{{element.partitions.length - positions[element.id] - 1}}
+					</button>
+					<button ng-click="move(1, element)" class="btn btn-default"><i class="fa fa-caret-right"></i></button>
+				</div>
+			</div>
+
+		</label>
+
+		<div class="col-sm-10">
+			<input-grid partitions="partitions[element.id]" ng-model="currentInput.values[element.id]" offset="positions[element.id]"></input-grid>
+		</div>
 	</div>
-</div>
+
+</form>
 
 <div acl-has-project-role="input">
 	<button class="btn btn-default" ng-click="save()">
