--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -23,17 +23,26 @@
 
 <style> td { text-align: center; } td a { display: block;width: 100%;}</style>
 
-<table class="table table-bordered table-stripped table-condensed" ng-if="selectedForm.collect == 'entity'">
+<table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th ng-style="{width: 100 / (project.entities.length + 1) + '%'}">Date Due</th>
-			<th ng-style="{width: 100 / (project.entities.length + 1) + '%'}" ng-repeat="entity in project.entities">{{entity.name}}</th>
+			<th ng-style="{width: colWidth}">Date Due</th>
+			<th ng-style="{width: colWidth}" ng-if="showProject">Project</th>
+			<th ng-style="{width: colWidth}" ng-if="showEntities" ng-repeat="entity in project.entities">{{entity.name}}</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
 			<th>{{date}}</th>
-			<td ng-repeat="entity in project.entities">
+			<td ng-if="showProject">
+				<a class="btn btn-xs"
+				   ng-class="{'btn-default': status.none === 'done', 'btn-primary': status.none === 'expected', 'btn-danger': status.none === 'outofschedule'}"
+				   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
+				   ng-if="status.none">
+					{{('project.input_status.' + status.none + (canEdit ? '-edit' : '-read')) | translate}}
+				</a>
+			</td>
+			<td ng-if="showEntities" ng-repeat="entity in project.entities">
 				<a class="btn btn-xs"
 				   ng-class="{'btn-default': status[entity.id] === 'done', 'btn-primary': status[entity.id] === 'expected', 'btn-danger': status[entity.id] === 'outofschedule'}"
 				   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: entity.id})"
@@ -41,28 +50,6 @@
 					{{('project.input_status.' + status[entity.id] + (canEdit ? '-edit' : '-read')) | translate}}
 				</a>
  			</td>
-		</tr>
-	</tbody>
-</table>
-
-<table class="table table-bordered table-stripped table-condensed" ng-if="selectedForm.collect == 'project'">
-	<thead>
-		<tr>
-			<th>Date Due</th>
-			<th>Current Status</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
-			<th>{{date}}</th>
-			<td>
-				<a ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
-				   ng-if="status"
-				   class="btn btn-xs"
-				   ng-class="{'btn-default': status === 'done', 'btn-primary': status === 'expected', 'btn-danger': status === 'outofschedule'}">
-					{{('project.input_status.' + status + (canEdit ? '-edit' : '-read')) | translate}}
-				</a>
-			</td>
 		</tr>
 	</tbody>
 </table>
