--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -9,40 +9,6 @@
 				<p class="help-block" ng-if="planningForm.display.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
-		
-		<div class="well well-sm">
-
-
-			<div class="form-group" show-errors>
-				<label for="relevance-input" class="col-sm-2 control-label" translate="project.relevance"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.relevance">
-					<textarea class="form-control"
-							  id="relevance-input"
-							  name="relevance"
-							  ng-model="planning.relevance"
-							  placeholder="{{'project.relevance_ph'|translate}}"
-							  required></textarea>
-
-					<p class="help-block" ng-if="planningForm.relevance.$error.required" translate="form.mandatory"></p>
-				</div>
-			</div>
-
-			<div class="form-group" show-errors>
-				<label for="source-input" class="col-sm-2 control-label" translate="project.source"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.source">
-					<input class="form-control" id="source-input" name="source" ng-model="planning.source" placeholder="{{'project.source_ph'|translate}}" required />
-					<p class="help-block" ng-if="planningForm.source.$error.required" translate="form.mandatory"></p>
-				</div>
-			</div>
-
-			<div class="form-group" show-errors>
-				<label for="in-charge-input" class="col-sm-2 control-label" translate="project.in_charge"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.inCharge">
-					<input class="form-control" id="in-charge-input" name="inCharge" ng-model="planning.inCharge" placeholder="{{'project.in_charge_ph'|translate}}" required />
-					<p class="help-block" ng-if="planningForm.inCharge.$error.required" translate="form.mandatory"></p>
-				</div>
-			</div>
-		</div>
 
 		<div class="well well-sm" acl-has-project-role="owner">
 			<div class="form-group">
@@ -95,49 +61,24 @@
 			<div class="form-group">
 				<label for="colorize-input" class="col-sm-2 control-label" translate="shared.colorize"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.colorize">
-					<input id="colorize-input" type="checkbox" ng-model="planning.colorize" />
+					<input id="colorize-input"
+						   type="checkbox"
+						   ng-model="planning.colorize"
+						   ng-disabled="planning.baseline == null || planning.target == null" />
 				</div>
 			</div>
 
-			<div class="form-group" show-errors>
+			<div class="form-group">
 				<label for="baseline-input" class="col-sm-2 control-label" translate="project.baseline"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.baseline">
-					<div class="input-group">
-						<span class="input-group-addon">
-							<input type="checkbox" ng-model="baselineUnknown" id="baseline_unknown_input">
-							<label for="baseline_unknown_input" style="font-weight: normal" translate="project.unknown"></label>
-						</span>
-
-						<input class="form-control"
-							   id="baseline-input"
-							   name="baseline"
-							   type="number"
-							   ng-model="planning.baseline"
-							   ng-disabled="baselineUnknown"
-							   placeholder="{{'project.baseline_ph'|translate}}"
-							   ng-required="!baselineUnknown" />
-					</div>
-				</div>
+					<optional-number ng-model="planning.baseline" default="0"></optional-number>
+ 				</div>
 			</div>
 
-			<div class="form-group" show-errors>
+			<div class="form-group">
 				<label for="target-input" class="col-sm-2 control-label" translate="project.target"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.target">
-					<div class="input-group">
-						<span class="input-group-addon">
-							<input type="checkbox" ng-model="targetUnknown" id="target_unknown_input">
-							<label for="target_unknown_input" style="font-weight: normal" translate="project.unknown"></label>
-						</span>
-
-						<input id="target-input"
-							   class="form-control"
-							   type="number"
-							   name="target"
-							   ng-model="planning.target"
-							   ng-disabled="targetUnknown"
-							   placeholder="{{'project.target_ph'|translate}}"
-							   ng-required="!targetUnknown" />
-					</div>
+					<optional-number ng-model="planning.target" default="100"></optional-number>
 				</div>
 			</div>
 		</div>
