--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -26,9 +26,9 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th ng-style="{width: colWidth}">Date Due</th>
-			<th ng-style="{width: colWidth}" ng-if="showProject">Project</th>
-			<th ng-style="{width: colWidth}" ng-if="showEntities" ng-repeat="entity in project.entities">{{entity.name}}</th>
+			<th ng-style="{width: (100 / numCols) + '%'}">Date Due</th>
+			<th ng-style="{width: (100 / numCols) + '%'}" ng-if="showProject">Project</th>
+			<th ng-style="{width: (100 / numCols) + '%'}" ng-if="showEntities" ng-repeat="entity in project.entities">{{entity.name}}</th>
 		</tr>
 	</thead>
 	<tbody>
