--- a/client/dev/partials/projects/specification/user-list.html
+++ b/client/dev/partials/projects/specification/user-list.html
@@ -10,29 +10,23 @@
 
 	<div class="form-group">
 		<label for="input-owner" class="col-sm-2 control-label" translate="project.owners"></label>
-		<div class="col-sm-10">
-			<ui-select multiple ng-model="project.owners" theme="bootstrap" required acl-has-project-role="owner">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.owners | getObjects:users | pluck:'name' | join:', '">
+			
+			<ui-select multiple ng-model="project.owners" theme="bootstrap" required>
 				<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
 				<ui-select-choices repeat="user._id as user in users">{{user.name}}</ui-select-choices>
 			</ui-select>
-
-			<p acl-lacks-project-role="owner" class="form-control-static">
-				{{project.owners | getObjects:users | pluck:'name' | join:', '}}
-			</p>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="input-input" class="col-sm-2 control-label" translate="project.dataEntryOperators"></label>
-		<div class="col-sm-10">
-			<ui-select multiple ng-model="project.dataEntryOperators" theme="bootstrap" required acl-has-project-role="owner">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.dataEntryOperators | getObjects:users | pluck:'name' | join:', '">
+
+			<ui-select multiple ng-model="project.dataEntryOperators" theme="bootstrap" required>
 				<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
 				<ui-select-choices repeat="user._id as user in users">{{user.name}}</ui-select-choices>
 			</ui-select>
-
-			<p acl-lacks-project-role="owner" class="form-control-static">
-				{{project.dataEntryOperators | getObjects:users | pluck:'name' | join:', '}}
-			</p>
 		</div>
 	</div>
 
