--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -374,3 +374,12 @@ ul:hover>.onrollover {
     text-align: center;
     vertical-align: middle !important;
   }
+
+
+
+  .btn-group-xxs>.btn, .btn-xxs {
+    padding: 1px 5px;
+    font-size: 10px;
+    line-height: 1.3;
+    border-radius: 3px;
+}
