--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -8,7 +8,7 @@
 
 <p ng-if="canEdit">
 	<input type="checkbox" ng-model="$parent.showFinished" id="show-finished"/>
-	<label for="show-finished">Afficher toutes les dates</label>
+	<label for="show-finished" translate="project.show_finished"></label>
 </p>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -26,8 +26,8 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th ng-style="{width: (100 / numCols) + '%'}">Date Due</th>
-			<th ng-style="{width: (100 / numCols) + '%'}" ng-if="showProject">Project</th>
+			<th ng-style="{width: (100 / numCols) + '%'}" translate="project.date_due"></th>
+			<th ng-style="{width: (100 / numCols) + '%'}" ng-if="showProject" translate="shared.project"></th>
 			<th ng-style="{width: (100 / numCols) + '%'}" ng-if="showEntities" ng-repeat="entity in project.entities">{{entity.name}}</th>
 		</tr>
 	</thead>
